get connect middleware

--- a/pkgs/ts_logger/example/pubspec.yaml
+++ b/pkgs/ts_logger/example/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  get: ^4.6.5
+  dio: ^5.4.3
   ts_logger:
     path: ../
 
