--- a/pkgs/ts_logger/pubspec.yaml
+++ b/pkgs/ts_logger/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ts_logger
 description: "A package intended for logging API requests and responses in debug console in a simple way."
-version: 1.0.0
+version: 1.0.0+1
 repository: "https://github.com/Tim-Solution/ts-flutter-packages/tree/main/pkgs/ts_logger"
 platforms:
   android:
